thesis: Fix date

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -128,7 +128,7 @@
     {\scshape\Large Masterarbeit} \par
     \vspace{1.8cm}
     \begin{multicols}{2}
-        Leipzig, \today \par
+        Leipzig, Februar, 2020 \par
         \columnbreak
         vorgelegt von: \par
         Felix Linker \par
